CORE: sign-in modified

--- a/projects/kolenergo-core/src/lib/authentication/components/sign-in/sign-in.component.html
+++ b/projects/kolenergo-core/src/lib/authentication/components/sign-in/sign-in.component.html
@@ -2,4 +2,6 @@
 <div matDialogContent>
   content
 </div>
-<div matDialogActions>actions</div>
+<div matDialogActions class="d-flex justify-content-center w-100 pb-2">
+  <button mat-stroked-button color="accent" class="w-100">Войти</button>
+</div>
