--- a/projects/kolenergo-core/src/lib/authentication/components/sign-in/sign-in.component.html
+++ b/projects/kolenergo-core/src/lib/authentication/components/sign-in/sign-in.component.html
@@ -1,7 +1,47 @@
 <div matDialogTitle>Авторизация</div>
 <div matDialogContent>
-  content
+  <!-- Start: Учетная запись -->
+  <form [formGroup]="signInForm">
+    <mat-form-field
+      class="w-100 mb-1"
+      [hideRequiredMarker]="true">
+      <input matInput
+             formControlName="account"
+             placeholder="Учетная запись"
+             required>
+      <mat-error *ngIf="signInForm.controls['account'].invalid">{{getFormErrorMessage('account')}}</mat-error>
+    </mat-form-field>
+    <!-- End: Учетная запись -->
+
+    <!-- Start: Пароль -->
+    <mat-form-field
+      class="w-100 mb-3"
+      [hideRequiredMarker]="true">
+      <input matInput
+             formControlName="password"
+             placeholder="Пароль"
+             required>
+      <mat-error *ngIf="signInForm.controls['password'].invalid">{{getFormErrorMessage('password')}}</mat-error>
+    </mat-form-field>
+    <!-- End: Пароль -->
+  </form>
 </div>
-<div matDialogActions class="d-flex justify-content-center w-100 pb-2">
-  <button mat-stroked-button color="accent" class="w-100">Войти</button>
+
+<!-- Start: Кнопка отправки данных для авторизации на сервер -->
+<div class="d-flex justify-content-center w-100 pb-2" [formGroup]="signInForm">
+  <button mat-stroked-button
+          color="accent"
+          class="w-100"
+          [disabled]="signInForm.invalid">
+    Войти
+  </button>
 </div>
+<!-- Start: Кнопка отправки данных для авторизации на сервер -->
+
+<!-- Start: Напоминание об использовании учетной записи Active Directory -->
+<div class="reminder text-muted border-top mt-3 pt-2 text-center">
+  <small>Для входа в приложение используйте Вашу учетную запись Active Directory</small>
+</div>
+<!-- End: Напоминание об использовании учетной записи Active Directory -->
+
+
