--- a/projects/aho-requests/src/styles.less
+++ b/projects/aho-requests/src/styles.less
@@ -12,3 +12,7 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
   background: @application-background-color;
 }
+
+* {
+  outline: none !important;
+}
