--- a/projects/aho-requests/src/app/aho-requests/components/aho-requests/aho-requests.component.less
+++ b/projects/aho-requests/src/app/aho-requests/components/aho-requests/aho-requests.component.less
@@ -1,9 +1,55 @@
 @app-header-height: 100px;
 
 .app-header {
-  height: @app-header-height;
+  // height: @app-header-height;
+
+  .header-title {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    .header-title-label {
+      display: flex;
+      flex-direction: row;
+      height: 40px;
+      border: 2px solid #ffd740;
+
+      .title-icon {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 40px;
+        height: 100%;
+        padding: 5px;
+        font-size: 20px;
+        background: #ffd740;
+      }
+
+      .title-label {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
+        font-family: "Segoe UI Light";
+        // text-transform: uppercase;
+        font-size: 19px;
+        line-height: 19px;
+        color: black;
+      }
+    }
+  }
 
   .mat-stroked-button {
     height: 40px;
+    font-family: "Segoe UI";
   }
+}
+
+
+.add-request-button {
+  position: fixed;
+  z-index: 100;
+  bottom: 20px;
+  right: 20px;
 }
