--- a/projects/aho-requests/src/app/aho-requests/components/requests-list/requests-list.component.html
+++ b/projects/aho-requests/src/app/aho-requests/components/requests-list/requests-list.component.html
@@ -1,3 +1,3 @@
 <div class="aho-requests-list">
-  <div class="aho-request" *ngFor="let request of [1, 2, 3, 4 ,5]">{{request}}</div>
+  <div class="aho-request" *ngFor="let request of [1, 2, 3, 4 ,5]" routerLink="/{{request}}">{{request}}</div>
 </div>
