--- a/projects/aho-requests/src/app/aho-requests/components/requests-list/requests-list.component.less
+++ b/projects/aho-requests/src/app/aho-requests/components/requests-list/requests-list.component.less
@@ -8,16 +8,24 @@
   .aho-request {
     display: flex;
     flex-direction: row;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px 10px;
+    font-family: "Segoe UI Light";
     border-bottom: 1px solid @request-border-color;
 
+    border-right: 4px;
     &:last-of-type {
       border-bottom: none;
     }
 
     &:hover {
       background: @request-background-color-hover;
+      border-top: none;
+      border-bottom: 1px solid transparent;
+      cursor: pointer;
+
+      &:nth-of-type(n-1) {
+        border-bottom: none !important;
+      }
     }
   }
 }
