--- a/projects/aho-requests/src/app/aho-requests/components/requests-list/requests-list.component.html
+++ b/projects/aho-requests/src/app/aho-requests/components/requests-list/requests-list.component.html
@@ -1,3 +1,62 @@
 <div class="aho-requests-list">
-  <div class="aho-request" *ngFor="let request of [1, 2, 3, 4 ,5]" routerLink="/{{request}}">{{request}}</div>
+  <table class="w-100">
+    <tbody>
+    <tr *ngFor="let request of requests">
+
+      <td class="request-meta-details">
+        <div class="d-flex flex-column">
+          <div>#{{request.id}}</div>
+          <div class="text-muted">
+            <small>{{request.dateCreatedD | date:'dd.MM.yyyy, hh:mm'}}</small>
+          </div>
+        </div>
+      </td>
+
+      <td class="request-author-initiator">
+        <div class="d-flex flex-column">
+          <div *ngIf="request.initiator">{{request.initiator}}</div>
+          <div>{{request.user.firstName + ' ' + request.user.lastName}}</div>
+        </div>
+      </td>
+
+      <td>
+        <div class="request-location">
+          {{request.room}}
+        </div>
+      </td>
+
+      <td>
+        <div class="request-content">
+          <div class="request-content-task" *ngFor="let task of request.tasks">
+            <div class="request-task-content">{{task.content.title}}</div>
+          </div>
+        </div>
+      </td>
+
+      <td class="request-employees">
+        <div class="d-flex flex-column">
+          <div *ngIf="request.employees.length === 0" class="text-muted">Не назначен</div>
+          <div *ngFor="let employee of request.employees">{{employee.firstName + ' ' + employee.lastName}}</div>
+        </div>
+      </td>
+
+      <td>
+        <div class="request-status">
+          {{request.status.title}}
+        </div>
+      </td>
+    </tr>
+    </tbody>
+  </table>
+
+  <div class="d-flex justify-content-center align-items-center pt-2 pb-2 pt-md-4 pb-md-4"
+       *ngIf="(currentPage$ | async) < (totalPages$ | async)">
+    <button mat-stroked-button
+            (click)="loadNextPage()"
+            color="primary"
+            class="p-2 pl-md-5 pr-md-5 col-12 col-md-auto">
+      <mat-icon>refresh</mat-icon>
+      Загрузить еще
+    </button>
+  </div>
 </div>
