--- a/projects/aho-requests/src/app/aho-requests/components/requests-list/requests-list.component.less
+++ b/projects/aho-requests/src/app/aho-requests/components/requests-list/requests-list.component.less
@@ -5,6 +5,50 @@
   display: flex;
   flex-direction: column;
 
+  table tbody {
+    font-family: "Segoe UI";
+    font-size: 14px;
+    background: white;
+
+    tr {
+      border-bottom: 1px solid @request-border-color;
+      cursor: pointer;
+
+      &:hover {
+        background: #fffde7;
+      }
+
+      td {
+        padding: 10px;
+        vertical-align: top;
+        &.request-meta-details {
+          min-width: 120px;
+        }
+
+        &.request-author-initiator {
+          min-width: 180px;
+        }
+
+        &.request-location {
+
+        }
+
+        &.request-content {
+
+        }
+
+        &.request-employees {
+          min-width: 180px;
+        }
+
+        &.request-status {
+
+        }
+      }
+    }
+  }
+
+
   .aho-request {
     display: flex;
     flex-direction: row;
@@ -19,12 +63,12 @@
 
     &:hover {
       background: @request-background-color-hover;
-      border-top: none;
-      border-bottom: 1px solid transparent;
+      // border-top: none;
+      // border-bottom: 1px solid transparent;
       cursor: pointer;
 
       &:nth-of-type(n-1) {
-        border-bottom: none !important;
+        // border-bottom: none !important;
       }
     }
   }
