AHO: layout updated, effects updated

--- a/projects/aho-requests/src/app/aho-requests/components/aho-requests/aho-requests.component.html
+++ b/projects/aho-requests/src/app/aho-requests/components/aho-requests/aho-requests.component.html
@@ -61,7 +61,7 @@
 
         <!-- Start: Список заявок -->
         <div class="row no-gutters">
-          <div class="col-12 pt-3">
+          <div class="col-12">
             <app-requests-list [requests]="(requests$ | async)"></app-requests-list>
           </div>
         </div>
