--- a/projects/aho-requests/src/app/aho-requests/components/requests-list/requests-list.component.html
+++ b/projects/aho-requests/src/app/aho-requests/components/requests-list/requests-list.component.html
@@ -5,7 +5,16 @@
 
       <td class="request-meta-details">
         <div class="d-flex flex-column">
-          <div>#{{request.id}}</div>
+          <div class="d-flex flex-row align-items-center">
+            <span class="mr-2">#{{request.id}}</span>
+            <mat-icon
+              color="primary"
+              fontSet="fa"
+              fontIcon="{{request.type.icon}}"
+              matTooltip="{{request.type.title}}"
+              matTooltipPosition="right">
+            </mat-icon>
+          </div>
           <div class="text-muted">
             <small>{{request.dateCreatedD | date:'dd.MM.yyyy, hh:mm'}}</small>
           </div>
@@ -40,9 +49,15 @@
         </div>
       </td>
 
-      <td>
-        <div class="request-status">
-          {{request.status.title}}
+      <td class="request-status">
+        <div class="d-flex flex-row justify-content-center align-items-center">
+          <mat-icon fontSet="far"
+                    fontIcon="{{request.status.icon}}"
+                    [style.color]="request.status.iconColor ? request.status.iconColor : 'black'"
+                    *ngIf="request.status.icon"
+                    matTooltip="{{request.status.id !== 4 ? request.status.title : request.status.title + ' (' + request.rejectReason.content + ')'}}"
+                    matTooltipPosition="left">
+          </mat-icon>
         </div>
       </td>
     </tr>
@@ -52,6 +67,7 @@
   <div class="d-flex justify-content-center align-items-center pt-2 pb-2 pt-md-4 pb-md-4"
        *ngIf="(currentPage$ | async) < (totalPages$ | async)">
     <button mat-stroked-button
+            [disabled]="(fetchingDataInProgress$ | async)"
             (click)="loadNextPage()"
             color="primary"
             class="p-2 pl-md-5 pr-md-5 col-12 col-md-auto">
