AHO: filters dialog added

--- a/projects/aho-requests/src/app/aho-requests/components/aho-requests/aho-requests.component.html
+++ b/projects/aho-requests/src/app/aho-requests/components/aho-requests/aho-requests.component.html
@@ -26,6 +26,7 @@
             <app-requests-search
               [filters]="(filters$ | async).getFilters()"
               (clearSearch)="clearSearch()"
+              (openFilters)="openFiltersDialog()"
               (changeFilters)="filtersChange($event)"
               class="w-100">
             </app-requests-search>
