--- a/projects/aho-requests/src/app/aho-requests/components/requests-list/requests-list.component.less
+++ b/projects/aho-requests/src/app/aho-requests/components/requests-list/requests-list.component.less
@@ -46,6 +46,10 @@
 
         }
 
+        &.request-date-expires {
+          min-width: 85px;
+        }
+
         &.request-employees {
           min-width: 180px;
         }
