--- a/projects/aho-requests/src/app/aho-requests/components/requests-search/requests-search.component.html
+++ b/projects/aho-requests/src/app/aho-requests/components/requests-search/requests-search.component.html
@@ -21,7 +21,7 @@
       (click)="clearSearchField()">
       <mat-icon>close</mat-icon>
     </button>
-    <button mat-icon-button matTooltip="Фильтры">
+    <button mat-icon-button matTooltip="Фильтры" (click)="filtersClickHandler()">
       <mat-icon>filter_list</mat-icon>
       <div class="indicator" *ngIf="filterManager.isFiltersApplied()"></div>
     </button>
