--- a/projects/aho-requests/src/app/aho-requests/components/filters-dialog/filters-dialog.component.html
+++ b/projects/aho-requests/src/app/aho-requests/components/filters-dialog/filters-dialog.component.html
@@ -1,33 +1,44 @@
 <div class="container-fluid">
   <div class="row" matDialogTitle>Фильтры</div>
   <div class="row" matDialogContent>
-    <form [formGroup]="filtersForm">
+    <form>
       <mat-form-field class="w-100">
-        <input matInput [matDatepicker]="startDate" formControlName="startDate" placeholder="Начальная дата">
+        <input matInput
+               [matDatepicker]="startDate"
+               [value]="(filters$ | async).getFilterById('start-date').getValue()"
+               (dateChange)="startDateChange($event)"
+               placeholder="Начальная дата">
         <mat-datepicker-toggle matSuffix [for]="startDate"></mat-datepicker-toggle>
         <mat-datepicker #startDate disabled="false"></mat-datepicker>
       </mat-form-field>
 
       <mat-form-field class="w-100">
-        <input matInput [matDatepicker]="endDate" formControlName="endDate" placeholder="Конечная дата">
+        <input matInput
+               [matDatepicker]="endDate"
+               (dateChange)="endDateChange($event)"
+               placeholder="Конечная дата">
         <mat-datepicker-toggle matSuffix [for]="endDate"></mat-datepicker-toggle>
         <mat-datepicker #endDate disabled="false"></mat-datepicker>
       </mat-form-field>
 
       <mat-form-field class="w-100">
-        <mat-select placeholder="Категория заявки">
+        <mat-select placeholder="Категория заявки" (selectionChange)="requestTypeChange($event)">
           <mat-option *ngFor="let type of (requestTypes$ | async)" [value]="type">{{type.title}}</mat-option>
         </mat-select>
       </mat-form-field>
 
       <mat-form-field class="w-100">
-        <mat-select placeholder="Статус заявки">
+        <mat-select placeholder="Статус заявки" (selectionChange)="requestStatusChange($event)">
           <mat-option *ngFor="let status of (requestStatuses$ | async)" [value]="status">{{status.title}}</mat-option>
         </mat-select>
       </mat-form-field>
 
       <div class="w-100 mb-2">
-        <button mat-flat-button color="primary" [disabled]="!(filters$ | async).isFiltersApplied()" class="w-100">
+        <button mat-flat-button
+                color="primary"
+                class="w-100"
+                [disabled]="!(filters$ | async).isFiltersApplied()"
+                (click)="applyFilters()">
           Применить фильтры
         </button>
       </div>
@@ -37,7 +48,6 @@
           Очистить фильтры
         </button>
       </div>
-
 
     </form>
   </div>
